// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rules engine where BMI is calculated and given value(s): {"qrur9Dvnyt5":40,"GieVkTxp4HH":180,"vV9UWAZohSf":85} 1`] = `
Array [
  Object {
    "displayKeyValuePair": Object {
      "id": "x7PaHGvgWY2",
      "key": "BMI",
      "value": 26.234567901234566,
    },
    "id": "indicators",
    "type": "DISPLAYKEYVALUEPAIR",
  },
]
`;

exports[`rules engine where BMI is calculated and given value(s): {"qrur9Dvnyt5":40,"GieVkTxp4HH":180,"vV9UWAZohSf":null} 1`] = `
Array [
  Object {
    "displayKeyValuePair": Object {
      "id": "x7PaHGvgWY2",
      "key": "BMI",
      "value": 0,
    },
    "id": "indicators",
    "type": "DISPLAYKEYVALUEPAIR",
  },
]
`;

exports[`rules engine where BMI is calculated and given value(s): {"qrur9Dvnyt5":40,"GieVkTxp4HH":null,"vV9UWAZohSf":85} 1`] = `
Array [
  Object {
    "displayKeyValuePair": Object {
      "id": "x7PaHGvgWY2",
      "key": "BMI",
      "value": Infinity,
    },
    "id": "indicators",
    "type": "DISPLAYKEYVALUEPAIR",
  },
]
`;

exports[`rules engine where BMI is calculated and given value(s): {"qrur9Dvnyt5":40,"GieVkTxp4HH":null,"vV9UWAZohSf":null} 1`] = `
Array [
  Object {
    "displayKeyValuePair": Object {
      "id": "x7PaHGvgWY2",
      "key": "BMI",
      "value": NaN,
    },
    "id": "indicators",
    "type": "DISPLAYKEYVALUEPAIR",
  },
]
`;

exports[`rules engine where BMI is calculated and given value(s): {"qrur9Dvnyt5":null,"GieVkTxp4HH":180,"vV9UWAZohSf":85} 1`] = `
Array [
  Object {
    "displayKeyValuePair": Object {
      "id": "x7PaHGvgWY2",
      "key": "BMI",
      "value": 26.234567901234566,
    },
    "id": "indicators",
    "type": "DISPLAYKEYVALUEPAIR",
  },
]
`;

exports[`rules engine where BMI is calculated and given value(s): {"qrur9Dvnyt5":null,"GieVkTxp4HH":180,"vV9UWAZohSf":null} 1`] = `
Array [
  Object {
    "displayKeyValuePair": Object {
      "id": "x7PaHGvgWY2",
      "key": "BMI",
      "value": 0,
    },
    "id": "indicators",
    "type": "DISPLAYKEYVALUEPAIR",
  },
]
`;

exports[`rules engine where BMI is calculated and given value(s): {"qrur9Dvnyt5":null,"GieVkTxp4HH":null,"vV9UWAZohSf":85} 1`] = `
Array [
  Object {
    "displayKeyValuePair": Object {
      "id": "x7PaHGvgWY2",
      "key": "BMI",
      "value": Infinity,
    },
    "id": "indicators",
    "type": "DISPLAYKEYVALUEPAIR",
  },
]
`;

exports[`rules engine where BMI is calculated and given value(s): {"qrur9Dvnyt5":null,"GieVkTxp4HH":null,"vV9UWAZohSf":null} 1`] = `
Array [
  Object {
    "displayKeyValuePair": Object {
      "id": "x7PaHGvgWY2",
      "key": "BMI",
      "value": NaN,
    },
    "id": "indicators",
    "type": "DISPLAYKEYVALUEPAIR",
  },
]
`;

exports[`rules engine where field is hidden regarding a boolean value and given value(s): {"sWoqcoByYmD":false} 1`] = `
Array [
  Object {
    "id": "vANAXwtLwcT",
    "message": "Hemoglobin value lower than normal ",
    "type": "SHOWWARNING",
  },
  Object {
    "id": "Ok9OQpitjQr",
    "type": "HIDEFIELD",
  },
]
`;

exports[`rules engine where field is hidden regarding a boolean value and given value(s): {"sWoqcoByYmD":true} 1`] = `
Array [
  Object {
    "id": "vANAXwtLwcT",
    "message": "Hemoglobin value lower than normal ",
    "type": "SHOWWARNING",
  },
]
`;

exports[`rules engine where field is hidden regarding the gender of the event and given value(s): {"oZg33kd9taw":"Female","SWfdB5lX0fk":null} 1`] = `
Array [
  Object {
    "displayKeyValuePair": Object {
      "id": "x7PaHGvgWY2",
      "key": "BMI",
      "value": NaN,
    },
    "id": "indicators",
    "type": "DISPLAYKEYVALUEPAIR",
  },
]
`;

exports[`rules engine where field is hidden regarding the gender of the event and given value(s): {"oZg33kd9taw":"Male","SWfdB5lX0fk":null} 1`] = `
Array [
  Object {
    "id": "SWfdB5lX0fk",
    "type": "HIDEFIELD",
  },
  Object {
    "displayKeyValuePair": Object {
      "id": "x7PaHGvgWY2",
      "key": "BMI",
      "value": NaN,
    },
    "id": "indicators",
    "type": "DISPLAYKEYVALUEPAIR",
  },
]
`;

exports[`rules engine where field is hidden regarding the gender of the event and given value(s): {"oZg33kd9taw":null,"SWfdB5lX0fk":null} 1`] = `
Array [
  Object {
    "displayKeyValuePair": Object {
      "id": "x7PaHGvgWY2",
      "key": "BMI",
      "value": NaN,
    },
    "id": "indicators",
    "type": "DISPLAYKEYVALUEPAIR",
  },
]
`;

exports[`rules engine where the default values Tests on runRulesForSingleEvent function 1`] = `
Array [
  Object {
    "id": "vANAXwtLwcT",
    "message": "Hemoglobin value lower than normal ",
    "type": "SHOWWARNING",
  },
  Object {
    "id": "Ok9OQpitjQr",
    "type": "HIDEFIELD",
  },
]
`;

exports[`rules engine where the default values Tests on runRulesForSingleEvent function 2`] = `
Array [
  Object {
    "displayKeyValuePair": Object {
      "id": "x7PaHGvgWY2",
      "key": "BMI",
      "value": NaN,
    },
    "id": "indicators",
    "type": "DISPLAYKEYVALUEPAIR",
  },
]
`;

exports[`rules engine where the default values Tests on runRulesForSingleEvent function 3`] = `
Array [
  Object {
    "id": "PAvRSZQyYjR",
    "type": "HIDESECTION",
  },
  Object {
    "id": "TIpDZhpNkmS",
    "type": "HIDESECTION",
  },
  Object {
    "id": "YpzV7H2BA6C",
    "type": "HIDESECTION",
  },
]
`;

exports[`rules engine where the default values Tests on runRulesForSingleEvent function 4`] = `null`;

exports[`rules engine where value needs to >= 9 and <= 99 and given value(s): {"vANAXwtLwcT":0} 1`] = `
Array [
  Object {
    "id": "vANAXwtLwcT",
    "message": "Hemoglobin value lower than normal ",
    "type": "SHOWWARNING",
  },
  Object {
    "id": "Ok9OQpitjQr",
    "type": "HIDEFIELD",
  },
]
`;

exports[`rules engine where value needs to >= 9 and <= 99 and given value(s): {"vANAXwtLwcT":9} 1`] = `
Array [
  Object {
    "id": "Ok9OQpitjQr",
    "type": "HIDEFIELD",
  },
]
`;

exports[`rules engine where value needs to >= 9 and <= 99 and given value(s): {"vANAXwtLwcT":99} 1`] = `
Array [
  Object {
    "id": "Ok9OQpitjQr",
    "type": "HIDEFIELD",
  },
]
`;

exports[`rules engine where value needs to >= 9 and <= 99 and given value(s): {"vANAXwtLwcT":100} 1`] = `
Array [
  Object {
    "id": "vANAXwtLwcT",
    "message": "The hemoglobin value cannot be above 99 ",
    "type": "SHOWERROR",
  },
  Object {
    "id": "Ok9OQpitjQr",
    "type": "HIDEFIELD",
  },
]
`;
